# horse-breed-service

./: .env.example  .gitignore  Dockerfile  ERROR_HANDLING_GUIDE.md  LICENSE  MONITORING_BEST_PRACTICES.md  MONITORING_GUIDE.md  README.md  SECURITY_PII_CHECKLIST.md  TEST_IMPLEMENTATION_SUMMARY.md  conftest.py  create_tables.py  debug_pii.py  demo_error_handling.py  docker-compose.yml  enhanced_logging_demo.py  monitoring_dashboard.html  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  seed_data.py  setup_monitoring.py  start_service.bat  start_service.ps1  start_service.py  start_service.sh  test_monitoring.py  test_pii_filtering.py  update_schema.py  validate_tests.py
.github/: CONTRIBUTING.md  DEVELOPMENT.md  copilot-instructions.md  horselover_context.md
.github/instructions/: api-endpoints.instructions.md  configuration.instructions.md  error-handling.instructions.md  logging-monitoring.instructions.md  service-layer.instructions.md  testing.instructions.md
app/: main.py
app/api/: horse_breeds.py
app/api/v1/: api.py
app/api/v1/endpoints/: horse_breeds.py  monitoring.py
app/core/: config.py  enhanced_logging.py  error_handlers.py  exceptions.py  logging.py  middleware.py
app/db/: database.py
app/models/: horse_breed.py
app/schemas/: horse_breed.py
app/services/: horse_breed_service.py
tests/: test_horse_breeds.py
tests/fixtures/: base_fixtures.py
tests/integration/: test_system_integration.py
tests/unit/api/: test_horse_breed_endpoints.py  test_monitoring_endpoints.py
tests/unit/core/: test_enhanced_logging.py  test_error_handlers.py  test_exceptions.py
